--- a/moderator/package.json
+++ b/moderator/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.6.9",
     "chartist": "^0.11.0",
     "node-sass": "^4.9.3",
+    "print-js": "^1.0.55",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.3.4",
