--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "lodash": "^4.17.11",
         "mini-toastr": "^0.7.2",
         "postcss-rtl": "^1.1.3",
+        "print-js": "^1.0.55",
         "radiobox.css": "^1.0.1",
         "screenfull": "^3.3.2",
         "sweetalert": "^2.1.2",
