--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "vuebars": "^0.1.1",
         "vueisotope": "^3.1.1",
         "vuejs-datepicker": "^0.9.21",
+        "vuetify": "^1.5.14",
         "vuetrend": "^0.3.2",
         "vuex": "^3.0.1",
         "weathericons": "^2.1.0"
